kv-store/proc-macros/build_fail_tests/binary_static_env/require_binary_rw_cursor/no_args.stderr
error: Expected at least 1 arguments, got 0.
 --> $DIR/no_args.rs:5:1
  |
5 | #[require_binary_rw_cursor]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
